<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beADonor"
            android:icon="@drawable/ic_baseline_person_be_a_donor_24"
            android:title="@string/menu_beADonor" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_date_range_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_aboutUs" />
    </group>
</menu>